Fix binding misnomer in params
Signed-off-by: John Foley <jfoley@pivotal.io>

--- a/tasks/push-many-logging-telemetry/task.yml
+++ b/tasks/push-many-logging-telemetry/task.yml
@@ -78,5 +78,5 @@ params:
   SCHEME_SUFFIX: ""
 
   # - Optional
-  # - The number of drain bindings to create.
-  BINDING_COUNT:
+  # - The number of drains to create.
+  DRAIN_COUNT:
