--- a/tasks/push-many-logging-telemetry/task.yml
+++ b/tasks/push-many-logging-telemetry/task.yml
@@ -58,8 +58,12 @@ params:
   SPACE_PREFIX:
 
   # - Required
-  # - The number of spaces to deploy apps to.
-  SPACE_COUNT:
+  # - The ID of the space to start deploying apps to.
+  SPACE_ID_START:
+
+  # - Required
+  # - The ID of the space to end deploying apps to.
+  SPACE_ID_END:
 
   # - Required
   # - The number of apps to create per space.
