--- a/pipelines/syslog-test.yml
+++ b/pipelines/syslog-test.yml
@@ -110,6 +110,9 @@ jobs:
             path: /instance_groups/name=database/vm_type
             value: n1-highcpu-16
           - type: replace
+            path: /instance_groups/name=database/persistent_disk_type
+            value: 1TB
+          - type: replace
             path: /instance_groups/name=router/instances
             value: 20
           - type: replace
