syslog-test: increase database ephemeral disk size
Signed-off-by: Tom Charles <tcharles@pivotal.io>

--- a/pipelines/syslog-test.yml
+++ b/pipelines/syslog-test.yml
@@ -113,6 +113,10 @@ jobs:
             path: /instance_groups/name=database/persistent_disk_type
             value: 1TB
           - type: replace
+            path: /instance_groups/name=database/vm_extensions?
+            value:
+            - 1TB_ephemeral_disk
+          - type: replace
             path: /instance_groups/name=router/instances
             value: 20
           - type: replace
