products: add forwarder agent and syslog agent windows tests
[#162563098]

Signed-off-by: Brady Love <blove@pivotal.io>

--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -503,6 +503,22 @@ jobs:
                   -ginkgo.slowSpecThreshold 20
               popd
             popd
+
+- name: loggregator-agent-tests
+  serial: true
+  public: true
+  plan:
+  - aggregate:
+    - get: loggregator-ci
+    - get: loggregator-agent
+      trigger: true
+  - aggregate:
+    - task: run-tests
+      file: loggregator-ci/tasks/go-test-with-latest-packages/task.yml
+      input_mapping:
+        source-repo: loggregator-agent
+      params:
+        IMPORT_PATH: code.cloudfoundry.org/loggregator-agent
     - do:
       - task: build-windows-test-binary
         config:
@@ -512,7 +528,7 @@ jobs:
             source:
               repository: loggregator/base
           inputs:
-          - name: loggregator-src
+          - name: loggregator-agent
           outputs:
           - name: binaries
           - name: test-binaries
@@ -525,11 +541,24 @@ jobs:
               set -ex
 
               ci_root=$PWD
-              mkdir -p workspace/src/code.cloudfoundry.org/loggregator
-              cp -r loggregator-src/. workspace/src/code.cloudfoundry.org/loggregator/
+              mkdir -p workspace/src/code.cloudfoundry.org/loggregator-agent
+              cp -r loggregator-agent/. workspace/src/code.cloudfoundry.org/loggregator-agent/
 
               function munge {
                 echo $1 | tr '/' '_'
+              }
+
+              function build_test {
+                build_dir=src/code.cloudfoundry.org/loggregator-agent
+                executable=$1
+
+                pushd $build_dir
+                  go get -t -d ./...
+                  for pkg in $(go list ./cmd/$executable/...); do
+                    go test -c -o $ci_root/test-binaries/$(munge $pkg)_test.exe $pkg
+                  done
+                  go build -o $ci_root/binaries/$executable.exe code.cloudfoundry.org/loggregator-agent/cmd/$executable
+                popd
               }
 
               pushd workspace
@@ -537,15 +566,10 @@ jobs:
                 export GOPATH="$PWD"
                 export PATH="$GOPATH/bin:$PATH"
 
-                pushd src/code.cloudfoundry.org/loggregator
-                  go get -t -d ./...
-                  for pkg in $(go list ./agent/...); do
-                    go test -c -o $ci_root/test-binaries/$(munge $pkg)_test.exe $pkg &
-                  done
-                  go build -o $ci_root/binaries/agent.exe code.cloudfoundry.org/loggregator/agent &
-                popd
+                build_test agent
+                build_test syslog-agent
+                build_test forwarder-agent
               popd
-              wait
       - task: run-windows-tests
         config:
           platform: windows
@@ -562,9 +586,6 @@ jobs:
                 exit 1
               }
 
-              $env:SKIP_BUILD = "true"
-              $env:AGENT_BUILD_PATH = "binaries\agent.exe"
-
               # Run all test binaries
               Get-ChildItem -Filter test-binaries\*.exe | ForEach {
                 &$_.Fullname /s
@@ -572,21 +593,6 @@ jobs:
                   throw "test failed"
                 }
               }
-
-- name: loggregator-agent-tests
-  serial: true
-  public: true
-  plan:
-  - aggregate:
-    - get: loggregator-ci
-    - get: loggregator-agent
-      trigger: true
-  - task: run-tests
-    file: loggregator-ci/tasks/go-test-with-latest-packages/task.yml
-    input_mapping:
-      source-repo: loggregator-agent
-    params:
-      IMPORT_PATH: code.cloudfoundry.org/loggregator-agent
 
 - name: loggregator-bump-submodule
   serial: true
