syslog-test: fix num drains per app and missing space
[#162555421]

Signed-off-by: Tom Charles <tcharles@pivotal.io>

--- a/pipelines/syslog-test.yml
+++ b/pipelines/syslog-test.yml
@@ -225,7 +225,7 @@ jobs:
       STARTING_SPACE_ID: 1
       ENDING_SPACE_ID: 25
       APPS_PER_SPACE: 40
-      BINDING_COUNT: 5
+      DRAIN_COUNT: 5
   # TODO: Schedule teardown and create of environment on weekends
 
 - name: create-spaces
