--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -2266,6 +2266,9 @@ jobs:
           - type: replace
             path: /update/max_in_flight
             value: 10
+          - type: replace
+            path: /instance_groups/name=adapter/jobs/name=adapter/properties/scalablesyslog?/adapter?/syslog_skip_cert_verify?
+            value: true
           EOT
 
           cat <<EOT >> ops-files/on-the-fly-iso.yml
