--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -1067,6 +1067,8 @@ jobs:
             cp cf-deployment/operations/experimental/use-compiled-releases-windows.yml ops-files/
             cp cf-deployment/operations/windows1803-cell.yml ops-files/
             cp cf-deployment/operations/use-latest-windows1803-stemcell.yml ops-files/
+            cp cf-deployment/operations/enable-service-discovery.yml ops-files/
+
             cp loggregator-agent-release/manifests/operations/cf-add-forwarder-agent.yml ops-files/
             cp loggregator-agent-release/manifests/operations/cf-syslog-agent-skip-cert-verify.yml ops-files/
             cp loggregator-agent-release/manifests/operations/cf-deployment-addon.yml ops-files/
@@ -1109,6 +1111,7 @@ jobs:
           use-compiled-releases-windows.yml
           windows1803-cell.yml
           use-latest-windows1803-stemcell.yml
+          enable-service-discovery.yml
           on-the-fly.yml
           cf-deployment-addon.yml
           cf-add-forwarder-agent.yml
