--- a/pipelines/syslog-test.yml
+++ b/pipelines/syslog-test.yml
@@ -1,52 +1,49 @@
+groups: []
 resources:
-- name: cf-deployment
+- name: loggregator-tools
   type: git
   source:
-    uri: https://github.com/cloudfoundry/cf-deployment
-    branch: release-candidate
-
-- name: cf-deployment-concourse-tasks
-  type: git
-  source:
-    uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks
-    tag_filter: v7.*
-
+    branch: syslog_test_deployer
+    uri: https://github.com/cloudfoundry-incubator/loggregator-tools
 - name: datadog-firehose-nozzle-release
   type: git
   source:
     uri: https://github.com/DataDog/datadog-firehose-nozzle-release.git
-
 - name: deployments-loggregator
   type: git
   source:
-    uri: git@github.com:cloudfoundry/deployments-loggregator.git
     private_key: ((deployments-loggregator-key))
-
-- name: loggregator-agent-release
-  type: git
-  source:
-    uri: https://github.com/cloudfoundry/loggregator-agent-release
-    branch: develop
-
-- name: loggregator-ci
-  type: git
-  source:
-    uri: https://github.com/cloudfoundry/loggregator-ci
-
-- name: logging-deployment
-  type: git
-  source:
-    uri: https://github.com/loggregator/logging-deployment
-
+    uri: git@github.com:cloudfoundry/deployments-loggregator.git
 - name: cf-drain-cli
   type: git
   source:
     uri: https://github.com/cloudfoundry/cf-drain-cli
-
+- name: cf-deployment
+  type: git
+  source:
+    branch: release-candidate
+    uri: https://github.com/cloudfoundry/cf-deployment
+- name: loggregator-agent-release
+  type: git
+  source:
+    branch: syslog_test
+    uri: https://github.com/cloudfoundry/loggregator-agent-release
+- name: loggregator-ci
+  type: git
+  source:
+    branch: syslog_test_deployer
+    uri: https://github.com/cloudfoundry/loggregator-ci
+- name: cf-deployment-concourse-tasks
+  type: git
+  source:
+    tag_filter: v7.*
+    uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks
+resource_types: []
 jobs:
 - name: cf-deploy
   serial: true
-  serial_groups: ["cf-deploy"]
+  serial_groups:
+  - cf-deploy
   plan:
   - aggregate:
     - get: cf-deployment
@@ -54,22 +51,22 @@ jobs:
     - get: deployments-loggregator
     - get: loggregator-agent-release
     - get: loggregator-ci
-    - get: logging-deployment
+    - get: loggregator-tools
     - get: cf-drain-cli
   - aggregate:
     - task: upload-loggregator-agent-release
       file: loggregator-ci/tasks/upload-release/task.yml
-      input_mapping:
-        bosh-release-dir: loggregator-agent-release
-        bbl-state: deployments-loggregator
       params:
         BBL_STATE_DIR: gcp/ci-pool/syslog-test
+      input_mapping:
+        bbl-state: deployments-loggregator
+        bosh-release-dir: loggregator-agent-release
     - task: upload-stemcell
       file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
-      input_mapping:
-        bbl-state: deployments-loggregator
       params:
         BBL_STATE_DIR: gcp/ci-pool/syslog-test
+      input_mapping:
+        bbl-state: deployments-loggregator
   - task: copy-ops-files
     config:
       platform: linux
@@ -78,16 +75,10 @@ jobs:
         source:
           repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
           tag: v3.19.0
-      inputs:
-      - name: loggregator-agent-release
-      - name: cf-deployment
-      - name: deployments-loggregator
-      outputs:
-      - name: ops-files
       run:
         path: /bin/bash
         args:
-        - "-c"
+        - -c
         - |
           set -e
 
@@ -151,23 +142,88 @@ jobs:
             path: /instance_groups/name=singleton-blobstore/vm_type
             value: medium
           EOT
+
+          cat <<EOT >> ops-files/on-the-fly-binding-limit.yml
+          - type: replace
+            path: /addons/name=loggr-syslog-agent/jobs/name=loggr-syslog-agent/properties/binding_per_app_limit?
+            value: 100
+          EOT
+      inputs:
+      - name: loggregator-agent-release
+      - name: cf-deployment
+      - name: deployments-loggregator
+      outputs:
+      - name: ops-files
   - task: cf-deploy
     file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
+    params:
+      BBL_STATE_DIR: gcp/ci-pool/syslog-test
+      OPS_FILES: |
+        scale-database-cluster.yml
+        on-the-fly.yml
+        cf-deployment-addon.yml
+        cf-add-forwarder-agent.yml
+        on-the-fly-binding-limit.yml
+        cf-syslog-agent-skip-cert-verify.yml
+        cf-deployment-add-system-metrics-agent.yml
+        clients.yml
+      SYSTEM_DOMAIN: syslog-test.loggr.cf-app.com
     input_mapping:
       bbl-state: deployments-loggregator
       vars-files: deployments-loggregator
+- name: push-apps
+  serial: true
+  serial_groups:
+  - cf-deploy
+  - create-spaces
+  plan:
+  - aggregate:
+    - get: deployments-loggregator
+      passed:
+      - create-spaces
+    - get: loggregator-ci
+    - get: loggregator-tools
+    - get: cf-drain-cli
+  - task: push-apps-and-create-drain-bindings
+    file: loggregator-ci/tasks/push-many-logging-telemetry/task.yml
+    params:
+      APP_PREFIX: syslog-scale-test
+      APPS_PER_SPACE: 40
+      BBL_STATE_DIR: gcp/ci-pool/syslog-test
+      DRAIN_COUNT: 20
+      DRAIN_IPS: "10.0.2.9, 10.0.2.88, 10.0.2.89, 10.0.2.58, 10.0.2.10, 10.0.2.90, 10.0.2.11, 10.0.2.12, 10.0.2.13, 10.0.2.91, 10.0.2.14, 10.0.2.15, 10.0.2.92, 10.0.2.93, 10.0.2.94, 10.0.2.16, 10.0.2.95, 10.0.2.59, 10.0.2.60, 10.0.2.96, 10.0.2.17, 10.0.2.18, 10.0.2.61, 10.0.2.19, 10.0.2.97, 10.0.2.62, 10.0.2.63, 10.0.2.20, 10.0.2.64, 10.0.2.65, 10.0.2.21, 10.0.2.22, 10.0.2.23, 10.0.2.24, 10.0.2.25, 10.0.2.26, 10.0.2.27, 10.0.2.66, 10.0.2.67, 10.0.2.28, 10.0.2.98, 10.0.2.29, 10.0.2.30, 10.0.2.31, 10.0.2.32, 10.0.2.68, 10.0.2.69, 10.0.2.33, 10.0.2.34, 10.0.2.99, 10.0.2.35, 10.0.2.36, 10.0.2.37, 10.0.2.70, 10.0.2.38, 10.0.2.71, 10.0.2.39, 10.0.2.72, 10.0.2.40, 10.0.2.73, 10.0.2.74, 10.0.2.41, 10.0.2.75, 10.0.2.76, 10.0.2.42, 10.0.2.77, 10.0.2.78, 10.0.2.43, 10.0.2.44, 10.0.2.45, 10.0.2.79, 10.0.2.46, 10.0.2.47, 10.0.2.100, 10.0.2.80, 10.0.2.48, 10.0.2.101, 10.0.2.102, 10.0.2.49, 10.0.2.50, 10.0.2.103, 10.0.2.51, 10.0.2.104, 10.0.2.8, 10.0.2.81, 10.0.2.52, 10.0.2.105, 10.0.2.82, 10.0.2.53, 10.0.2.54, 10.0.2.106, 10.0.2.83, 10.0.2.107, 10.0.2.84, 10.0.2.55, 10.0.2.56, 10.0.2.57, 10.0.2.85, 10.0.2.86, 10.0.2.87"
+
+      EMIT_INTERVAL: 2ms
+      ENDING_SPACE_ID: 51
+      ORG: syslog-test
+      SCHEME_SUFFIX: -v3
+      SKIP_SSL_VALIDATION: true
+      SPACE_PREFIX: syslog-test
+      STARTING_SPACE_ID: 1
+      SYSTEM_DOMAIN: syslog-test.loggr.cf-app.com
+    input_mapping:
+      bbl-state: deployments-loggregator
+- name: create-spaces
+  serial: true
+  serial_groups:
+  - cf-deploy
+  - push-apps
+  plan:
+  - aggregate:
+    - get: deployments-loggregator
+      passed:
+      - cf-deploy
+    - get: loggregator-ci
+  - task: create-org-and-spaces
+    file: loggregator-ci/tasks/create-many-spaces/task.yml
     params:
       BBL_STATE_DIR: gcp/ci-pool/syslog-test
+      ORG: syslog-test
+      SPACE_COUNT: 100
+      SPACE_PREFIX: syslog-test
       SYSTEM_DOMAIN: syslog-test.loggr.cf-app.com
-      OPS_FILES: |
-          scale-database-cluster.yml
-          on-the-fly.yml
-          cf-deployment-addon.yml
-          cf-add-forwarder-agent.yml
-          cf-syslog-agent-skip-cert-verify.yml
-          cf-deployment-add-system-metrics-agent.yml
-          clients.yml
-
+    input_mapping:
+      bbl-state: deployments-loggregator
 - name: deploy-datadog-nozzle
   serial: true
   plan:
@@ -198,54 +254,3 @@ jobs:
       ops-files: deployments-loggregator
       vars-files: deployments-loggregator
       vars-store: deployments-loggregator
-
-- name: push-apps
-  serial: true
-  serial_groups: ["cf-deploy", "create-spaces"]
-  plan:
-  - aggregate:
-    - get: deployments-loggregator
-      passed: ["create-spaces"]
-    - get: loggregator-ci
-    - get: logging-deployment
-    - get: cf-drain-cli
-  - task: push-apps-and-create-drain-bindings
-    file: loggregator-ci/tasks/push-many-logging-telemetry/task.yml
-    input_mapping:
-      bbl-state: deployments-loggregator
-    params:
-      BBL_STATE_DIR: gcp/ci-pool/syslog-test
-      SYSTEM_DOMAIN: syslog-test.loggr.cf-app.com
-      ORG: syslog-test
-      SPACE_PREFIX: syslog-test
-      APP_PREFIX: syslog-scale-test
-      DATADOG_API_KEY: ((datadog-loggregator-api-key))
-      SKIP_SSL_VALIDATION: true
-      SCHEME_SUFFIX: "-v3"
-      STARTING_SPACE_ID: 1
-      ENDING_SPACE_ID: 25
-      APPS_PER_SPACE: 40
-      DRAIN_COUNT: 5
-  # TODO: Schedule teardown and create of environment on weekends
-
-- name: create-spaces
-  serial: true
-  serial_groups:
-  - cf-deploy
-  - push-apps
-  plan:
-  - aggregate:
-    - get: deployments-loggregator
-      passed: ["cf-deploy"]
-    - get: loggregator-ci
-  - task: create-org-and-spaces
-    file: loggregator-ci/tasks/create-many-spaces/task.yml
-    params:
-      BBL_STATE_DIR: gcp/ci-pool/syslog-test
-      ORG: syslog-test
-      SPACE_COUNT: 100
-      SPACE_PREFIX: syslog-test
-      SYSTEM_DOMAIN: syslog-test.loggr.cf-app.com
-    input_mapping:
-      bbl-state: deployments-loggregator
-
