--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -1072,6 +1072,7 @@ jobs:
             cp loggregator-agent-release/manifests/operations/cf-add-forwarder-agent.yml ops-files/
             cp loggregator-agent-release/manifests/operations/cf-syslog-agent-skip-cert-verify.yml ops-files/
             cp loggregator-agent-release/manifests/operations/cf-deployment-addon.yml ops-files/
+            cp loggregator-agent-release/manifests/operations/cf-deployment-windows-addon.yml ops-files/
             cp deployments-loggregator/gcp/ci-pool/ten/ops-files/clients.yml ops-files/
             cp loggregator-agent-release/manifests/operations/cf-deployment-add-system-metrics-agent.yml ops-files/
 
@@ -1116,6 +1117,7 @@ jobs:
           cf-deployment-addon.yml
           cf-add-forwarder-agent.yml
           cf-syslog-agent-skip-cert-verify.yml
+          cf-deployment-windows-addon.yml
           clients.yml
           cf-deployment-add-system-metrics-agent.yml
     - task: enable-feature-flags
