--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -1506,6 +1506,7 @@ jobs:
           popd
 
           cp cf-deployment/operations/scale-to-one-az.yml ops-files/
+          cp cf-deployment/operations/enable-service-discovery.yml ops-files/
 
           cat <<EOT >> ops-files/on-the-fly.yml
           - type: replace
@@ -1529,6 +1530,7 @@ jobs:
       OPS_FILES: |
         scale-to-one-az.yml
         on-the-fly.yml
+        enable-service-discovery.yml
   - task: enable-feature-flags
     file: cf-deployment-concourse-tasks/set-feature-flags/task.yml
     params:
