--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -1072,6 +1072,7 @@ jobs:
             cp loggregator-agent-release/manifests/operations/cf-add-forwarder-agent.yml ops-files/
             cp loggregator-agent-release/manifests/operations/cf-syslog-agent-skip-cert-verify.yml ops-files/
             cp loggregator-agent-release/manifests/operations/cf-deployment-addon.yml ops-files/
+            cp loggregator-agent-release/manifests/operations/cf-deployment-windows-addon.yml ops-files/
             cp deployments-loggregator/gcp/ci-pool/ten/ops-files/clients.yml ops-files/
             cp loggregator-agent-release/manifests/operations/cf-deployment-add-system-metrics-agent.yml ops-files/
 
@@ -1095,6 +1096,9 @@ jobs:
             - type: replace
               path: /instance_groups/name=adapter/jobs/name=adapter/properties/scalablesyslog?/adapter?/syslog_skip_cert_verify?
               value: true
+            - type: replace
+              path: /instance_groups/name=diego-cell/instances
+              value: 3
             EOT
     - task: upload-stemcell
       file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
@@ -1114,6 +1118,7 @@ jobs:
           enable-service-discovery.yml
           on-the-fly.yml
           cf-deployment-addon.yml
+          cf-deployment-windows-addon.yml
           cf-add-forwarder-agent.yml
           cf-syslog-agent-skip-cert-verify.yml
           clients.yml
@@ -2395,4 +2400,3 @@ jobs:
         CF_DOMAIN: coconut.cf-app.com
         SKIP_SSL_VALIDATION: true
         APP_PUSH_TIMEOUT: 180s
-
