products: add log-stream-cli to cf-deploy step
[#163741986]

Signed-off-by: Tom Charles <tcharles@pivotal.io>

--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -1767,6 +1767,9 @@ jobs:
     - get: cf-drain-cli
       passed:
         - cf-drain-cli-tests
+    - get: log-stream-cli
+      passed:
+        - log-stream-cli-tests
   - aggregate:
     - task: upload-loggregator-release
       file: loggregator-ci/tasks/upload-release/task.yml
