log-stream-cli: change docker image to newer golang for testing
Signed-off-by: John Cornish <jcornish@pivotal.io>

--- a/tasks/release-log-stream-cli/task.yml
+++ b/tasks/release-log-stream-cli/task.yml
@@ -3,7 +3,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: loggregator/base
+    repository: chentom77/loggregator
 
 inputs:
 - name: loggregator-ci    # - This repo
