--- a/tasks/release-log-stream-cli/task.yml
+++ b/tasks/release-log-stream-cli/task.yml
@@ -3,7 +3,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: chentom77/loggregator
+    repository: loggregator/base
 
 inputs:
 - name: loggregator-ci    # - This repo
