--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -39,6 +39,9 @@ groups:
   - log-stream-cli-tests
   - log-stream-cli-promotion
 
+  - leadership-election-tests
+  - leadership-election-bump-submodule
+
 - name: cf-syslog-drain
   jobs:
   - cats
@@ -95,6 +98,11 @@ groups:
   - service-metrics-system-tests
   - service-metrics-promotion
   - service-metrics-master-promotion
+
+- name: leadership-election
+  jobs:
+  - leadership-election-tests
+  - leadership-election-bump-submodule
 
 - name: datadog-nozzle
   jobs:
@@ -372,6 +380,22 @@ resources:
   type: git
   source:
     uri: git@github.com:cloudfoundry/statsd-injector-release
+    branch: develop
+    private_key: {{cf-loggregator-oauth-bot-key}}
+    ignore_paths:
+    - .final_builds
+    - releases
+
+- name: leadership-election
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry/leadership-election
+    private_key: {{cf-loggregator-oauth-bot-key}}
+
+- name: leadership-election-release
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry/leadership-election-release
     branch: develop
     private_key: {{cf-loggregator-oauth-bot-key}}
     ignore_paths:
@@ -1427,6 +1451,87 @@ jobs:
       rebase: true
 
 ###############################################################################
+# LEADERSHIP ELECTION
+###############################################################################
+- name: leadership-election-tests
+  serial: true
+  public: true
+  plan:
+    - aggregate:
+        - get: loggregator-ci
+        - get: leadership-election
+          trigger: true
+    - task: run-tests
+      file: loggregator-ci/tasks/go-test-with-latest-packages/task.yml
+      input_mapping:
+        source-repo: leadership-election
+      params:
+        IMPORT_PATH: code.cloudfoundry.org/leadership-election
+
+- name: leadership-election-bump-submodule
+  serial: true
+  plan:
+    - aggregate:
+        - get: loggregator-ci
+        - get: leadership-election-release
+          trigger: true
+        - get: leadership-election
+          passed: ["leadership-election-tests"]
+          trigger: true
+    - task: update-submodule
+      file: loggregator-ci/tasks/bump-submodule/task.yml
+      input_mapping:
+        release-repo: leadership-election-release
+        source-repo: leadership-election
+      output_mapping:
+        bumped-release-repo: bumped-leadership-election-release
+      params:
+        SUBMODULE_PATH: src/code.cloudfoundry.org/leadership-election
+    - task: sync-package-specs
+      file: loggregator-ci/tasks/run-release-script/task.yml
+      input_mapping:
+        release-repo: bumped-leadership-election-release
+      output_mapping:
+        updated-release-repo: synced-leadership-election-release
+      params:
+        SCRIPT: scripts/sync-package-specs
+    - task: run-tests
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source:
+            repository: loggregator/base
+        inputs:
+          - name: synced-leadership-election-release
+        run:
+          path: bash
+          args:
+            - -c
+            - |
+              #!/bin/bash
+
+              set -ex
+
+              pushd synced-leadership-election-release
+                export GOPATH="$PWD"
+                export PATH="$GOPATH/bin:$PATH"
+                go test -race code.cloudfoundry.org/leadership-election/...
+              popd
+    - task: commit
+      file: loggregator-ci/tasks/commit/task.yml
+      input_mapping:
+        release-repo: synced-leadership-election-release
+      output_mapping:
+        committed-repo: committed-leadership-election-release
+      params:
+        COMMIT_MESSAGE: "Bump leadership-election"
+    - put: leadership-election-release
+      params:
+        repository: committed-leadership-election-release
+        rebase: true
+
+###############################################################################
 # NOISY NEIGHBOR NOZZLE
 ###############################################################################
 - name: noisy-neighbor-nozzle-tests
@@ -1805,6 +1910,8 @@ jobs:
         - cf-syslog-drain-bump-submodule
     - get: statsd-injector-release
       trigger: true
+    - get: leadership-election-release
+      trigger: true
     - get: cf-drain-cli
       passed:
         - cf-drain-cli-tests
@@ -1834,6 +1941,12 @@ jobs:
       file: loggregator-ci/tasks/upload-release/task.yml
       input_mapping:
         bosh-release-dir: statsd-injector-release
+      params:
+        BBL_STATE_DIR: gcp/coconut-bbl
+    - task: upload-leadership-election-release
+      file: loggregator-ci/tasks/upload-release/task.yml
+      input_mapping:
+        bosh-release-dir: leadership-election-release
       params:
         BBL_STATE_DIR: gcp/coconut-bbl
   - task: copy-ops-files
@@ -1894,6 +2007,11 @@ jobs:
             path: /releases/name=statsd-injector
             value:
               name: statsd-injector
+              version: latest
+          - type: replace
+            path: /releases/name=leadership-election
+            value:
+              name: leadership-election
               version: latest
           - type: replace
             path: /instance_groups/name=doppler/instances
